Motif_Athena_Package/include_C/Xlib.h


typedef struct _XExtData {
	int number;		
	struct _XExtData *next;	
	int (*free_private)(	
	struct _XExtData *extension
	);
	XPointer private_data;	
} XExtData;
typedef struct {		
	int extension;		
	int major_opcode;	
	int first_event;	
	int first_error;	
} XExtCodes;
typedef struct {
	int function;		
	unsigned long plane_mask;
	unsigned long foreground;
	unsigned long background;
	int line_width;		
	int line_style;	 	
	int cap_style;	  	
	int join_style;	 	
	int fill_style;	 	
	int fill_rule;	  	
	int arc_mode;		
	Pixmap tile;		
	Pixmap stipple;		
	int ts_x_origin;	
	int ts_y_origin;
        Font font;	        
	int subwindow_mode;     
	Bool graphics_exposures;
	int clip_x_origin;	
	int clip_y_origin;
	Pixmap clip_mask;	
	int dash_offset;	
	char dashes;
} XGCValues;
typedef struct {
	XExtData *ext_data;	
	VisualID visualid;	
#if defined(__cplusplus) || defined(c_plusplus)
	int c_class;		
#else
	int class;		
#endif
	unsigned long red_mask, green_mask, blue_mask;	
	int bits_per_rgb;	
	int map_entries;	
} Visual;
typedef struct {
	XExtData *ext_data;	
	struct _XDisplay *display;
	Window root;		
	int width, height;	
	int mwidth, mheight;	
	int ndepths;		
	Depth *depths;		
	int root_depth;		
	Visual *root_visual;	
	GC default_gc;		
	Colormap cmap;		
	unsigned long white_pixel;
	unsigned long black_pixel;	
	int max_maps, min_maps;	
	int backing_store;	
	Bool save_unders;
	long root_input_mask;	
} Screen;
typedef struct {
    Pixmap background_pixmap;	
    unsigned long background_pixel;	
    Pixmap border_pixmap;	
    unsigned long border_pixel;	
    int bit_gravity;		
    int win_gravity;		
    int backing_store;		
    unsigned long backing_planes;
    unsigned long backing_pixel;
    Bool save_under;		
    long event_mask;		
    long do_not_propagate_mask;	
    Bool override_redirect;	
    Colormap colormap;		
    Cursor cursor;		
} XSetWindowAttributes;
typedef struct {
	int family;		
	int length;		
	char *address;		
} XHostAddress;
typedef struct _XImage {
    int width, height;		
    int xoffset;		
    int format;			
    char *data;			
    int byte_order;		
    int bitmap_unit;		
    int bitmap_bit_order;	
    int bitmap_pad;		
    int depth;			
    int bytes_per_line;		
    int bits_per_pixel;		
    unsigned long red_mask;	
    unsigned long green_mask;
    unsigned long blue_mask;
    XPointer obdata;		
    struct funcs {		
	struct _XImage *(*create_image)(
		struct _XDisplay* ,
		Visual*		,
		unsigned int	,
		int		,
		int		,
		char*		,
		unsigned int	,
		unsigned int	,
		int		,
		int		);
	int (*destroy_image)        (struct _XImage *);
	unsigned long (*get_pixel)  (struct _XImage *, int, int);
	int (*put_pixel)            (struct _XImage *, int, int, unsigned long);
	struct _XImage *(*sub_image)(struct _XImage *, int, int, unsigned int, unsigned int);
	int (*add_pixel)            (struct _XImage *, long);
	} f;
} XImage;
typedef struct {
	unsigned long pixel;
	unsigned short red, green, blue;
	char flags;  
	char pad;
} XColor;
typedef struct {
 	int max_keypermod;	
 	KeyCode *modifiermap;	
} XModifierKeymap;
typedef struct _XDisplay Display;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	unsigned int state;	
	unsigned int keycode;	
	Bool same_screen;	
} XKeyEvent;
typedef struct {
    XExtData	*ext_data;	
    Font        fid;            
    unsigned	direction;	
    unsigned	min_char_or_byte2;
    unsigned	max_char_or_byte2;
    unsigned	min_byte1;	
    unsigned	max_byte1;	
    Bool	all_chars_exist;
    unsigned	default_char;	
    int         n_properties;   
    XFontProp	*properties;	
    XCharStruct	min_bounds;	
    XCharStruct	max_bounds;	
    XCharStruct	*per_char;	
    int		ascent;		
    int		descent;	
} XFontStruct;
typedef union { Display *display;
		GC gc;
		Visual *visual;
		Screen *screen;
		ScreenFormat *pixmap_format;
		XFontStruct *font; } XEDataObject;
extern XModifierKeymap	*XInsertModifiermapEntry(
    XModifierKeymap*	,
#if NeedWidePrototypes
extern XModifierKeymap *XNewModifiermap(
    int			
);
extern XImage *XCreateImage(
    Display*		,
    Visual*		,
    unsigned int	,
    int			,
    int			,
    char*		,
    unsigned int	,
    unsigned int	,
    int			,
    int			
);
extern Status XInitImage(
    XImage*		
);
extern XImage *XGetImage(
    Display*		,
    Drawable		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    int			
);
extern XImage *XGetSubImage(
    Display*		,
    Drawable		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    int			,
    XImage*		,
    int			,
    int			
);
extern Display *XOpenDisplay(
     char*	
);
extern void XrmInitialize(
    void
);
extern char *XFetchBytes(
    Display*		,
    int*		
);
extern char *XFetchBuffer(
    Display*		,
    int*		,
    int			
);
extern char *XGetAtomName(
    Display*		,
    Atom		
);
extern Status XGetAtomNames(
    Display*		,
    Atom*		,
    int			,
    char**		
);
extern char *XGetDefault(
    Display*		,
     char*	,
     char*	
);
extern char *XDisplayName(
     char*	
);
extern char *XKeysymToString(
    KeySym		
);
extern int (*XSynchronize(
    Display*		,
    Bool		
))(
    Display*		
);
extern int (*XSetAfterFunction(
    Display*		,
    int (*) (
	     Display*	
            )		
))(
    Display*		
);
extern Atom XInternAtom(
    Display*		,
     char*	,
    Bool		
);
extern Status XInternAtoms(
    Display*		,
    char**		,
    int			,
    Bool		,
    Atom*		
);
extern Colormap XCopyColormapAndFree(
    Display*		,
    Colormap		
);
extern Colormap XCreateColormap(
    Display*		,
    Window		,
    Visual*		,
    int			
);
extern Cursor XCreatePixmapCursor(
    Display*		,
    Pixmap		,
    Pixmap		,
    XColor*		,
    XColor*		,
    unsigned int	,
    unsigned int	
);
extern Cursor XCreateGlyphCursor(
    Display*		,
    Font		,
    Font		,
    unsigned int	,
    unsigned int	,
    XColor  *	,
    XColor  *	
);
extern Cursor XCreateFontCursor(
    Display*		,
    unsigned int	
);
extern Font XLoadFont(
    Display*		,
     char*	
);
extern GC XCreateGC(
    Display*		,
    Drawable		,
    unsigned long	,
    XGCValues*		
);
extern GContext XGContextFromGC(
    GC			
);
extern void XFlushGC(
    Display*		,
    GC			
);
extern Pixmap XCreatePixmap(
    Display*		,
    Drawable		,
    unsigned int	,
    unsigned int	,
    unsigned int	
);
extern Pixmap XCreateBitmapFromData(
    Display*		,
    Drawable		,
     char*	,
    unsigned int	,
    unsigned int	
);
extern Pixmap XCreatePixmapFromBitmapData(
    Display*		,
    Drawable		,
    char*		,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    unsigned long	,
    unsigned int	
);
extern Window XCreateSimpleWindow(
    Display*		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    unsigned long	
);
extern Window XGetSelectionOwner(
    Display*		,
    Atom		
);
extern Window XCreateWindow(
    Display*		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned int	,
    int			,
    unsigned int	,
    Visual*		,
    unsigned long	,
    XSetWindowAttributes*	
);
extern Colormap *XListInstalledColormaps(
    Display*		,
    Window		,
    int*		
);
extern char **XListFonts(
    Display*		,
     char*	,
    int			,
    int*		
);
extern char **XListFontsWithInfo(
    Display*		,
     char*	,
    int			,
    int*		,
    XFontStruct**	
);
extern char **XGetFontPath(
    Display*		,
    int*		
);
extern char **XListExtensions(
    Display*		,
    int*		
);
extern Atom *XListProperties(
    Display*		,
    Window		,
    int*		
);
extern XHostAddress *XListHosts(
    Display*		,
    int*		,
    Bool*		
);
extern KeySym XKeycodeToKeysym(
    Display*		,
#if NeedWidePrototypes
extern KeySym XLookupKeysym(
    XKeyEvent*		,
    int			
);
extern KeySym *XGetKeyboardMapping(
    Display*		,
#if NeedWidePrototypes
extern KeySym XStringToKeysym(
     char*	
);
extern long XMaxRequestSize(
    Display*		
);
extern long XExtendedMaxRequestSize(
    Display*		
);
extern char *XResourceManagerString(
    Display*		
);
extern char *XScreenResourceString(
	Screen*		
);
extern unsigned long XDisplayMotionBufferSize(
    Display*		
);
extern VisualID XVisualIDFromVisual(
    Visual*		
);
extern Status XInitThreads(
    void
);
extern void XLockDisplay(
    Display*		
);
extern void XUnlockDisplay(
    Display*		
);
extern XExtCodes *XInitExtension(
    Display*		,
     char*	
);
extern XExtCodes *XAddExtension(
    Display*		
);
extern XExtData *XFindOnExtensionList(
    XExtData**		,
    int			
);
extern XExtData **XEHeadOfExtensionList(
    XEDataObject	
);
extern Window XRootWindow(
    Display*		,
    int			
);
extern Window XDefaultRootWindow(
    Display*		
);
extern Window XRootWindowOfScreen(
    Screen*		
);
extern Visual *XDefaultVisual(
    Display*		,
    int			
);
extern Visual *XDefaultVisualOfScreen(
    Screen*		
);
extern GC XDefaultGC(
    Display*		,
    int			
);
extern GC XDefaultGCOfScreen(
    Screen*		
);
extern unsigned long XBlackPixel(
    Display*		,
    int			
);
extern unsigned long XWhitePixel(
    Display*		,
    int			
);
extern unsigned long XAllPlanes(
    void
);
extern unsigned long XBlackPixelOfScreen(
    Screen*		
);
extern unsigned long XWhitePixelOfScreen(
    Screen*		
);
extern unsigned long XNextRequest(
    Display*		
);
extern unsigned long XLastKnownRequestProcessed(
    Display*		
);
extern char *XServerVendor(
    Display*		
);
extern char *XDisplayString(
    Display*		
);
extern Colormap XDefaultColormap(
    Display*		,
    int			
);
extern Colormap XDefaultColormapOfScreen(
    Screen*		
);
extern Display *XDisplayOfScreen(
    Screen*		
);
extern Screen *XScreenOfDisplay(
    Display*		,
    int			
);
extern Screen *XDefaultScreenOfDisplay(
    Display*		
);
extern long XEventMaskOfScreen(
    Screen*		
);
extern int XScreenNumberOfScreen(
    Screen*		
);
typedef int (*XErrorHandler) (	    
    Display*		,
    XErrorEvent*	
);
extern XErrorHandler XSetErrorHandler (
    XErrorHandler	
);
typedef int (*XIOErrorHandler) (    
    Display*		
);
extern XIOErrorHandler XSetIOErrorHandler (
    XIOErrorHandler	
);