Motif_Athena_Package/include_C/Xlib.pp


function XInsertModifiermapEntry(para1:PXModifierKeymap; para2:dword; para3:TKeyCode; para4:longint):PXModifierKeymap;cdecl;external;
{ max_keys_per_mod  }
function XNewModifiermap(para1:longint):PXModifierKeymap;cdecl;external;
{ display  }{ visual  }{ depth  }{ format  }{ offset  }{ data  }{ width  }{ height  }{ bitmap_pad  }{ bytes_per_line  }
function XCreateImage(para1:PDisplay; para2:PVisual; para3:dword; para4:longint; para5:longint; 
           para6:Pchar; para7:dword; para8:dword; para9:longint; para10:longint):PXImage;cdecl;external;
{ image  }
function XInitImage(para1:PXImage):TStatus;cdecl;external;
{ display  }{ d  }{ x  }{ y  }{ width  }{ height  }{ plane_mask  }{ format  }
function XGetImage(para1:PDisplay; para2:TDrawable; para3:longint; para4:longint; para5:dword; 
           para6:dword; para7:dword; para8:longint):PXImage;cdecl;external;
{ display  }{ d  }{ x  }{ y  }{ width  }{ height  }{ plane_mask  }{ format  }{ dest_image  }{ dest_x  }{ dest_y  }
function XGetSubImage(para1:PDisplay; para2:TDrawable; para3:longint; para4:longint; para5:dword; 
           para6:dword; para7:dword; para8:longint; para9:PXImage; para10:longint; 
           para11:longint):PXImage;cdecl;external;
{
 * X function declarations.
  }
{ display_name  }
function XOpenDisplay(para1:Pchar):PDisplay;cdecl;external;
procedure XrmInitialize;cdecl;external;
{ display  }{ nbytes_return  }
function XFetchBytes(para1:PDisplay; para2:Plongint):Pchar;cdecl;external;
{ display  }{ nbytes_return  }{ buffer  }
function XFetchBuffer(para1:PDisplay; para2:Plongint; para3:longint):Pchar;cdecl;external;
{ display  }{ atom  }
function XGetAtomName(para1:PDisplay; para2:TAtom):Pchar;cdecl;external;
{ dpy  }{ atoms  }{ count  }{ names_return  }
function XGetAtomNames(para1:PDisplay; para2:PAtom; para3:longint; para4:PPchar):TStatus;cdecl;external;
{ display  }{ program  }{ option  }
function XGetDefault(para1:PDisplay; para2:Pchar; para3:Pchar):Pchar;cdecl;external;
{ string  }
function XDisplayName(para1:Pchar):Pchar;cdecl;external;
{ keysym  }
function XKeysymToString(para1:TKeySym):Pchar;cdecl;external;
{ display  }{ onoff  }
{ display  }
function XSynchronize(para1:PDisplay; para2:TBool):function (para1:PDisplay):longint;cdecl;external;
{ display  }{ display  }
{ procedure  }
{ display  }
function XSetAfterFunction(para1:PDisplay; para2:function (para1:PDisplay):longint):function (para1:PDisplay):longint;cdecl;external;
{ display  }{ atom_name  }{ only_if_exists  }
function XInternAtom(para1:PDisplay; para2:Pchar; para3:TBool):TAtom;cdecl;external;
{ dpy  }{ names  }{ count  }{ onlyIfExists  }{ atoms_return  }
function XInternAtoms(para1:PDisplay; para2:PPchar; para3:longint; para4:TBool; para5:PAtom):TStatus;cdecl;external;
{ display  }{ colormap  }
function XCopyColormapAndFree(para1:PDisplay; para2:TColormap):TColormap;cdecl;external;
{ display  }{ w  }{ visual  }{ alloc  }
function XCreateColormap(para1:PDisplay; para2:TWindow; para3:PVisual; para4:longint):TColormap;cdecl;external;
{ display  }{ source  }{ mask  }{ foreground_color  }{ background_color  }{ x  }{ y  }
function XCreatePixmapCursor(para1:PDisplay; para2:TPixmap; para3:TPixmap; para4:PXColor; para5:PXColor; 
           para6:dword; para7:dword):TCursor;cdecl;external;
{ display  }{ source_font  }{ mask_font  }{ source_char  }{ mask_char  }{ foreground_color  }{ background_color  }
function XCreateGlyphCursor(para1:PDisplay; para2:TFont; para3:TFont; para4:dword; para5:dword; 
           para6:PXColor; para7:PXColor):TCursor;cdecl;external;
{ display  }{ shape  }
function XCreateFontCursor(para1:PDisplay; para2:dword):TCursor;cdecl;external;
{ display  }{ name  }
function XLoadFont(para1:PDisplay; para2:Pchar):TFont;cdecl;external;
{ display  }{ d  }{ valuemask  }{ values  }
function XCreateGC(para1:PDisplay; para2:TDrawable; para3:dword; para4:PXGCValues):TGC;cdecl;external;
{ gc  }
function XGContextFromGC(para1:TGC):TGContext;cdecl;external;
{ display  }{ gc  }
procedure XFlushGC(para1:PDisplay; para2:TGC);cdecl;external;
{ display  }{ d  }{ width  }{ height  }{ depth  }
function XCreatePixmap(para1:PDisplay; para2:TDrawable; para3:dword; para4:dword; para5:dword):TPixmap;cdecl;external;
{ display  }{ d  }{ data  }{ width  }{ height  }
function XCreateBitmapFromData(para1:PDisplay; para2:TDrawable; para3:Pchar; para4:dword; para5:dword):TPixmap;cdecl;external;
{ display  }{ d  }{ data  }{ width  }{ height  }{ fg  }{ bg  }{ depth  }
function XCreatePixmapFromBitmapData(para1:PDisplay; para2:TDrawable; para3:Pchar; para4:dword; para5:dword; 
           para6:dword; para7:dword; para8:dword):TPixmap;cdecl;external;
{ display  }{ parent  }{ x  }{ y  }{ width  }{ height  }{ border_width  }{ border  }{ background  }
function XCreateSimpleWindow(para1:PDisplay; para2:TWindow; para3:longint; para4:longint; para5:dword; 
           para6:dword; para7:dword; para8:dword; para9:dword):TWindow;cdecl;external;
{ display  }{ selection  }
function XGetSelectionOwner(para1:PDisplay; para2:TAtom):TWindow;cdecl;external;
{ display  }{ parent  }{ x  }{ y  }{ width  }{ height  }{ border_width  }{ depth  }{ class  }{ visual  }{ valuemask  }{ attributes  }
function XCreateWindow(para1:PDisplay; para2:TWindow; para3:longint; para4:longint; para5:dword; 
           para6:dword; para7:dword; para8:longint; para9:dword; para10:PVisual; 
           para11:dword; para12:PXSetWindowAttributes):TWindow;cdecl;external;
{ display  }{ w  }{ num_return  }
function XListInstalledColormaps(para1:PDisplay; para2:TWindow; para3:Plongint):PColormap;cdecl;external;
{ display  }{ pattern  }{ maxnames  }{ actual_count_return  }
function XListFonts(para1:PDisplay; para2:Pchar; para3:longint; para4:Plongint):^Pchar;cdecl;external;
{ display  }{ pattern  }{ maxnames  }{ count_return  }{ info_return  }
function XListFontsWithInfo(para1:PDisplay; para2:Pchar; para3:longint; para4:Plongint; para5:PPXFontStruct):^Pchar;cdecl;external;
{ display  }{ npaths_return  }
function XGetFontPath(para1:PDisplay; para2:Plongint):^Pchar;cdecl;external;
{ display  }{ nextensions_return  }
function XListExtensions(para1:PDisplay; para2:Plongint):^Pchar;cdecl;external;
{ display  }{ w  }{ num_prop_return  }
function XListProperties(para1:PDisplay; para2:TWindow; para3:Plongint):PAtom;cdecl;external;
{ display  }{ nhosts_return  }{ state_return  }
function XListHosts(para1:PDisplay; para2:Plongint; para3:PBool):PXHostAddress;cdecl;external;
{ display  }{$if NeedWidePrototypes}
{ keycode  }{$else}
{ keycode  }{$endif}
{ index  }

function XKeycodeToKeysym(para1:PDisplay; para2:dword; para3:TKeyCode; para4:longint):TKeySym;cdecl;external;
{ key_event  }{ index  }
function XLookupKeysym(para1:PXKeyEvent; para2:longint):TKeySym;cdecl;external;
{ display  }{$if NeedWidePrototypes}
{ first_keycode  }{$else}
{ first_keycode  }{$endif}
{ keycode_count  }{ keysyms_per_keycode_return  }

function XGetKeyboardMapping(para1:PDisplay; para2:dword; para3:TKeyCode; para4:longint; para5:Plongint):PKeySym;cdecl;external;
{ string  }
function XStringToKeysym(para1:Pchar):TKeySym;cdecl;external;
{ display  }
function XMaxRequestSize(para1:PDisplay):longint;cdecl;external;
{ display  }
function XExtendedMaxRequestSize(para1:PDisplay):longint;cdecl;external;
{ display  }
function XResourceManagerString(para1:PDisplay):Pchar;cdecl;external;
{ screen  }
function XScreenResourceString(para1:PScreen):Pchar;cdecl;external;
{ display  }
function XDisplayMotionBufferSize(para1:PDisplay):dword;cdecl;external;
{ visual  }
function XVisualIDFromVisual(para1:PVisual):TVisualID;cdecl;external;
{ multithread routines  }
function XInitThreads:TStatus;cdecl;external;
{ display  }
procedure XLockDisplay(para1:PDisplay);cdecl;external;
{ display  }
procedure XUnlockDisplay(para1:PDisplay);cdecl;external;
{ routines for dealing with extensions  }
{ display  }{ name  }
function XInitExtension(para1:PDisplay; para2:Pchar):PXExtCodes;cdecl;external;
{ display  }
function XAddExtension(para1:PDisplay):PXExtCodes;cdecl;external;
{ structure  }{ number  }
function XFindOnExtensionList(para1:PPXExtData; para2:longint):PXExtData;cdecl;external;
{ object  }
function XEHeadOfExtensionList(para1:TXEDataObject):^PXExtData;cdecl;external;
{ these are routines for which there are also macros  }
{ display  }{ screen_number  }
function XRootWindow(para1:PDisplay; para2:longint):TWindow;cdecl;external;
{ display  }
function XDefaultRootWindow(para1:PDisplay):TWindow;cdecl;external;
{ screen  }
function XRootWindowOfScreen(para1:PScreen):TWindow;cdecl;external;
{ display  }{ screen_number  }
function XDefaultVisual(para1:PDisplay; para2:longint):PVisual;cdecl;external;
{ screen  }
function XDefaultVisualOfScreen(para1:PScreen):PVisual;cdecl;external;
{ display  }{ screen_number  }
function XDefaultGC(para1:PDisplay; para2:longint):TGC;cdecl;external;
{ screen  }
function XDefaultGCOfScreen(para1:PScreen):TGC;cdecl;external;
{ display  }{ screen_number  }
function XBlackPixel(para1:PDisplay; para2:longint):dword;cdecl;external;
{ display  }{ screen_number  }
function XWhitePixel(para1:PDisplay; para2:longint):dword;cdecl;external;
function XAllPlanes:dword;cdecl;external;
{ screen  }
function XBlackPixelOfScreen(para1:PScreen):dword;cdecl;external;
{ screen  }
function XWhitePixelOfScreen(para1:PScreen):dword;cdecl;external;
{ display  }
function XNextRequest(para1:PDisplay):dword;cdecl;external;
{ display  }
function XLastKnownRequestProcessed(para1:PDisplay):dword;cdecl;external;
{ display  }
function XServerVendor(para1:PDisplay):Pchar;cdecl;external;
{ display  }
function XDisplayString(para1:PDisplay):Pchar;cdecl;external;
{ display  }{ screen_number  }
function XDefaultColormap(para1:PDisplay; para2:longint):TColormap;cdecl;external;
{ screen  }
function XDefaultColormapOfScreen(para1:PScreen):TColormap;cdecl;external;
{ screen  }
function XDisplayOfScreen(para1:PScreen):PDisplay;cdecl;external;
{ display  }{ screen_number  }
function XScreenOfDisplay(para1:PDisplay; para2:longint):PScreen;cdecl;external;
{ display  }
function XDefaultScreenOfDisplay(para1:PDisplay):PScreen;cdecl;external;
{ screen  }
function XEventMaskOfScreen(para1:PScreen):longint;cdecl;external;
{ screen  }
function XScreenNumberOfScreen(para1:PScreen):longint;cdecl;external;
{ WARNING, this type not in Xlib spec  }
{ display  }{ error_event  }
type

  TXErrorHandler = function (para1:PDisplay; para2:PXErrorEvent):longint;cdecl;
{ handler  }

function XSetErrorHandler(para1:TXErrorHandler):TXErrorHandler;cdecl;external;
{ WARNING, this type not in Xlib spec  }
{ display  }
type

  TXIOErrorHandler = function (para1:PDisplay):longint;cdecl;
{ handler  }

function XSetIOErrorHandler(para1:TXIOErrorHandler):TXIOErrorHandler;cdecl;external;
{ WARNING, this type not in Xlib spec  }
{ display  }
{ user_data  }
type

  TXIOErrorExitHandler = procedure (para1:PDisplay; para2:pointer);cdecl;
{ display  }
{ handler  }
{ user_data  }
